--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7410,7 +7410,7 @@ ol.wp-block-rss {
   border-radius: 50%;
 }
 
-.footer-contact_icon:after, .footer-contact_icon:before {
+/* .footer-contact_icon:after, .footer-contact_icon:before {
   content: '';
   position: absolute;
   left: 0;
@@ -7420,16 +7420,16 @@ ol.wp-block-rss {
   height: 20px;
   width: 20px;
   z-index: -2;
-}
+} */
 
-.footer-contact_icon:after {
+/* .footer-contact_icon:after {
   height: 30px;
   width: 30px;
   top: auto;
   bottom: -6px;
   left: auto;
   right: 0;
-}
+} */
 
 .footer-contact_icon:hover {
   background: rgba(255, 255, 255, 0.12);
@@ -8556,7 +8556,7 @@ blockquote.has-very-dark-gray-color {
   position: relative;
   margin-bottom: var(--blog-space-y, 40px);
   padding: var(--blog-space-y, 40px) var(--blog-space-x, 40px);
-  border: 1px solid var(--border-color);
+  border: groove #053d81 3px;
   box-shadow: 0px 7px 14px 0px rgba(234, 237, 242, 0.5);
   border-radius: 10px;
 }
@@ -15761,9 +15761,11 @@ span.select2-selection.select2-selection--single:focus {
 .blog-single.style2 .blog-img {
   margin-bottom: 30px;
 }
-
+.blog-img img{
+  border: groove #043d81 3px!important;
+}
 .blog-single.style2 .blog-img img {
-  border: groove #043d81 3px;
+  border: groove #043d81 3px!important;
   width: 100%;
   -webkit-transition: 0.4s ease-in-out;
   transition: 0.4s ease-in-out;
@@ -19789,7 +19791,7 @@ span.select2-selection.select2-selection--single:focus {
           transform: rotate(-30deg);
   border-radius: 20px;
   display: inline-block;
-  overflow: hidden;
+  /* overflow: hidden; */
   width: 170px;
   height: 170px;
 }
@@ -19823,9 +19825,9 @@ span.select2-selection.select2-selection--single:focus {
   margin-bottom: 15px;
 }
 
-.process-card_text {
+/* .process-card_text {
   margin-bottom: -0.5em;
-}
+} */
 
 .process-card:hover .process-card_icon img {
   -webkit-transform: rotateY(180deg);
