--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1432,10 +1432,10 @@ textarea.is-invalid {
   margin-bottom: 0;
 }
 
-.form-messages.success {
+/* .form-messages.success {
   color: var(--success-color);
   display: block;
-}
+} */
 
 .form-messages.error {
   color: var(--error-color);
@@ -24482,5 +24482,19 @@ span.select2-selection.select2-selection--single:focus {
 } */
  .accordion-button:not(.collapsed){
   background-image: linear-gradient(to right, #535291 0%, #2c82a2 51%, #64488c 100%);
-  color: var(--white-color);
+ 
  }
+ /* .accordion-card .accordion-button-h5{
+  color: var(--white-color)!important;
+ } */
+ .accordion-button:not(.collapsed) h5{
+  color: #fff;
+ }
+ #success-box {
+  display: none;
+  border: 1px solid #4CAF50;
+  background-color: #dff0d8;
+  color: #4CAF50;
+  padding: 15px;
+  margin: 20px 0;
+}
